force-app/main/default/objects/RevRecView__c/RevRecView__c.object-meta.xml
<CustomObject>
    <label>RevRecView</label>
    <nameField>
        <label>RevRecView Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RevRecViews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>