force-app/main/default/objects/RevRecView__c/fields/CategoryName__c.field-meta.xml
<CustomField>
    <fullName>CategoryName__c</fullName>
    <label>CategoryName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>