force-app/main/default/objects/RevRecView__c/fields/DeferredRev__c.field-meta.xml
<CustomField>
    <fullName>DeferredRev__c</fullName>
    <label>DeferredRev</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>