force-app/main/default/objects/RevRecView__c/fields/LineItemAmount__c.field-meta.xml
<CustomField>
    <fullName>LineItemAmount__c</fullName>
    <label>LineItemAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>