force-app/main/default/objects/RevRecView__c/fields/RegcognizedRev__c.field-meta.xml
<CustomField>
    <fullName>RegcognizedRev__c</fullName>
    <label>RegcognizedRev</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>