force-app/main/default/objects/RevRecView__c/fields/RevRecOpportunityLineItem__c.field-meta.xml
<CustomField>
    <fullName>RevRecOpportunityLineItem__c</fullName>
    <label>RevRecOpportunityLineItem</label>
    <referenceTo>RevRecOpportunityLineItem__c</referenceTo>
    <relationshipLabel>RevRecViews</relationshipLabel>
    <relationshipName>RevRecViews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>